--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.6.2",
     "axios": "^1.4.0",
     "diff": "^5.1.0",
+    "lodash.debounce": "^4.0.8",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
