--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
+    "@types/lodash.debounce": "^4.0.7",
     "antd": "^5.6.2",
     "axios": "^1.4.0",
     "diff": "^5.1.0",
