--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.13.0"
   },
   "devDependencies": {
