--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = []
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.12"
 fastapi = "0.97.0"
 uvicorn = "^0.22.0"
 pydantic = "^1.10.9"
@@ -17,6 +17,12 @@ SQLAlchemy = "^2.0.16"
 gunicorn = "^20.1.0"
 fastapi-users = { extras = ["sqlalchemy"], version = "^11.0.0" }
 python-dotenv = "^1.0.0"
+implicit = "0.7.1"
+joblib = "1.3.2"
+pandas = "2.0.3"
+gensim = "4.3.2"
+scikit-learn = "1.2.2"
+scipy = "1.11.2"
 
 
 [tool.poetry.group.dev.dependencies]
